Spacing fixes

--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,6 @@ aside hr {
   border: 0;
   border-top: 1px solid #ccc;
   margin: 1em 0;
-  padding: 0;
 }
 
 audio,
@@ -136,6 +135,11 @@ body {
   text-align: center;
 }
 
+.profile h1 {
+  display:  block;
+  margin-top: 1em;
+}
+
 .profile .subtitle {
   color: black;
   font-size: 18px;
@@ -149,16 +153,6 @@ body {
 .profile .subtitle2 {
   color: black;
   font-size: 15px;
-}
-
-.profile img {
-  display: block;
-  margin: 0 auto;
-  margin-bottom: 1em;
-  margin-top: 1em;
-  width: 75%;
-  height: 75%;
-  border-radius: 50%;
 }
 
 .profile i {
@@ -353,7 +347,6 @@ body {
   .main .work hr,
   section .after,
   .profile .subtitle2,
-  .profile img,
   .profile .ion-social-github::before,
   .profile .ion-edit::before,
   .profile .ion-pound,
